srcs/tester/base/map/swap_std/log.txt
./base/map/swap_std/patched.cpp:16:3: error: call to 'swap' is ambiguous
  swap(foo,bar);
  ^~~~
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/move.h:187:5: note: candidate function [with _Tp = ft::map<char, int, ft::less<char>, std::allocator<ft::pair<const char, int> > >]
    swap(_Tp& __a, _Tp& __b)
    ^
../Utils.hpp:7:8: note: candidate function [with T = ft::map<char, int, ft::less<char>, std::allocator<ft::pair<const char, int> > >]
  void swap(T & a, T & b) {
       ^
1 error generated.
